--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                             <div class="d-flex justify-content-between mb-3"><span>TECHNICAL ANALYSIS</span><i class="fa fa-check text-primary pt-1"></i></div>
                             <div class="d-flex justify-content-between mb-3"><span>FUNDAMENTAL ANALYSIS</span><i class="fa fa-check text-primary pt-1"></i></div>
                             <div class="d-flex justify-content-between mb-2"><span>RISK MANAGEMENT</span><i class="fa fa-check text-primary pt-1"></i></div>
-                            <a href="#" class="btn btn-primary py-2 px-4 mt-4">Join Now</a>
+                            <a href="contact.html" class="btn btn-primary py-2 px-4 mt-4">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -401,7 +401,7 @@
                             <div class="d-flex justify-content-between mb-3"><span>LIQUIDITY</span><i class="fa fa-check text-primary pt-1"></i></div>
                             <div class="d-flex justify-content-between mb-3"><span>SUPPPLY & DEMAND</span><i class="fa fa-check text-primary pt-1"></i></div>
                             <div class="d-flex justify-content-between mb-2"><span>RISK MANAGEMENT</span><i class="fa fa-check text-primary pt-1"></i></div>
-                            <a href="#" class="btn btn-primary py-2 px-4 mt-4">Join Now</a>
+                            <a href="contact.html" class="btn btn-primary py-2 px-4 mt-4">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -424,7 +424,7 @@
                             <div class="d-flex justify-content-between mb-3"><span>TRADING PSYCHOLOGY</span><i class="fa fa-check text-primary pt-1"></i></div>
                             <div class="d-flex justify-content-between mb-3"><span>WALLET SECURITY</span><i class="fa fa-check text-primary pt-1"></i></div>
                             <div class="d-flex justify-content-between mb-2"><span>RISK MANAGEMENT</span><i class="fa fa-check text-primary pt-1"></i></div>
-                            <a href="#" class="btn btn-primary py-2 px-4 mt-4">Join Now</a>
+                            <a href="contact.html" class="btn btn-primary py-2 px-4 mt-4">Join Now</a>
                         </div>
                         
                     </div>
