--- a/service.html
+++ b/service.html
@@ -187,8 +187,9 @@
 
 
 
- <!-- Testimonial Start -->
- <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+
+<!-- Testimonial Start -->
+<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-4 mx-auto" style="max-width: 600px;">
             <h5 class="fw-bold text-primary text-uppercase">Testimonial</h5>
@@ -197,9 +198,9 @@
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.6s">
             <div class="testimonial-item bg-light my-4">
                 <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                    <img class="img-fluid rounded" src="img/f5.jpg" style="width: 60px; height: 60px;" >
+                    <img class="img-fluid rounded" src="img/1.jpg" style="width: 60px; height: 60px;">
                     <div class="ps-4">
-                        <h4 class="text-primary mb-1">Raymond  Johnson</h4>
+                        <h4 class="text-primary mb-1">Earlenemyeso1</h4>
                         <small class="text-uppercase">Student</small>
                     </div>
                 </div>
@@ -209,10 +210,10 @@
             </div>
             <div class="testimonial-item bg-light my-4">
                 <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                    <img class="img-fluid rounded" src="img/f4.jpg" style="width: 60px; height: 60px;" >
+                    <img class="img-fluid rounded" src="img/2.jpg" style="width: 60px; height: 60px;">
                     <div class="ps-4">
-                        <h4 class="text-primary mb-1">James Kinuthia</h4>
-                        <small class="text-uppercase">Accountant</small>
+                        <h4 class="text-primary mb-1">Njoroge_Jr</h4>
+                        <small class="text-uppercase">Student</small>
                     </div>
                 </div>
                 <div class="pt-4 pb-5 px-5">
@@ -221,28 +222,227 @@
             </div>
             <div class="testimonial-item bg-light my-4">
                 <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                    <img class="img-fluid rounded" src="img/f3.jpg" style="width: 60px; height: 60px;" >
+                    <img class="img-fluid rounded" src="img/3.jpg" style="width: 60px; height: 60px;">
                     <div class="ps-4">
-                        <h4 class="text-primary mb-1">Trevor Dylan</h4>
+                        <h4 class="text-primary mb-1">Dantechronicles</h4>
                         <small class="text-uppercase">Student</small>
                     </div>
                 </div>
                 <div class="pt-4 pb-5 px-5">
-                  Flossin is the best one ever,yet, Those entries are crazy😂
+                    Flossin is the best one ever,yet, Those entries are crazy😂
                 </div>
             </div>
             <div class="testimonial-item bg-light my-4">
                 <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                    <img class="img-fluid rounded" src="img/fl1.jpg" style="width: 60px; height: 60px;" >
+                    <img class="img-fluid rounded" src="img/4.jfif" style="width: 60px; height: 60px;">
                     <div class="ps-4">
-                        <h4 class="text-primary mb-1">Mike Mwogera</h4>
+                        <h4 class="text-primary mb-1">Colloh-a</h4>
                         <small class="text-uppercase">Student</small>
                     </div>
                 </div>
                 <div class="pt-4 pb-5 px-5">
-                    After  a terrible breakup with my baby daddy, I struggled to get fees and food and rent for me and my baby girl,but overtime I learnt about forex and let me tell you😍
+                    I struggled to get fees and food and rent for me and my  girl,but overtime I learnt about forex and let me tell you maina😂
                 </div>
             </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/5.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">_therealdarlene</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Mr Flossin😍 mwenyewe, nothing short of greatness!
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/6.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Gemini_niccur0</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Game recognizes game, uyu boyz the last thing you'll hear ni ati amekutoka, Flossin keep doing what you do.
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/7.jfif" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Sir_sk_ke</h4>
+                        <small class="text-uppercase">Trader</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    I always enjoy sharing note na Flossin, we never miss! To more wins my G
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/8.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">W.a.n.g.a.r.h</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Yo, Flossin's forex classes are legit! Dude breaks down the game in a way that's easy to grasp. Nimepata insights za maana sana, sasa najiamini nikifanya trades.
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/9.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Mercyochola</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Flossin's binary bots are top-notch! Nimepata matokeo mazuri sana tangu nianze kuzitumia. Na kitu kizuri, Flossin anakuwa supportive na anajua kukubali makosa pale inapobidi.
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/10.jfif" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Mary Maina</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Gal power to the moon I can do my bills and support my family, all thanks to this great mentor asante😘
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/a.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Mike.coin_1</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Crpto trading simplified, lipa class and change financial situation
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/b.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Satoshiembian</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                   Mimi nilikuwa narisk tu sasa, kumbe ilikuwa risk worth it, asanti bigman umeniokolea.
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/c.png" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Master_bent</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                   This man makes the game look sooooo easy , am really paying attention mzee, hope to get to your level😪
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/d.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Hannahke_</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Binary bots zako ni mwenda man, from your analysis to your support thankyou.
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/e.jfif" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">emilymwaura</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                   Iyo benz lazima ninunue mzee, this is definitely my year no matter what em people say, You have taught me enough
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/g.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">kryptonic</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Izo groups za signals ni mwenda wazimu unaweza pata umemake mshahara ya msee once wuuueee🤣🤣
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/h.jpg" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Jayden.nic-ke</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Tangu enzi za restaurant man, hadi hapa enyewe we have come from far.....na tunaenda mabali manze....
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/i.jfif" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Mianochris"0</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                   God bless this man he is the definition of honestly humble, thank you for changing my story.
+                </div>
+            </div>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/33.jfif" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">babayaomwenyewe</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    I always enjoy attending the physical classes so much to learn from guru apa, na kujibiwa maswali live
+                </div>
+            </div>
+            
+            <!-- Additional Testimonials -->
+            <!-- Begin loop for additional testimonials -->
+            <?php for ($i = 1; $i <= 20; $i++) { ?>
+            <div class="testimonial-item bg-light my-4">
+                <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+                    <img class="img-fluid rounded" src="img/j.jfif" style="width: 60px; height: 60px;">
+                    <div class="ps-4">
+                        <h4 class="text-primary mb-1">Job.innocent</h4>
+                        <small class="text-uppercase">Student</small>
+                    </div>
+                </div>
+                <div class="pt-4 pb-5 px-5">
+                    Flossin's binary bots are incredible! They've helped me make consistent profits, and Flossin is always there to offer support and guidance. Highly recommended!👍
+                </div>
+            </div>
+            <?php } ?>
+            <!-- End loop for additional testimonials -->
+            
         </div>
     </div>
 </div>
