--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="" class="fancybox" rel="ligthbox">
-                    <img  src="img/7.jfif" class="zoom img-fluid "  alt="">
+                    <img  src="img/.jfif" class="zoom img-fluid "  alt="">
                 </a>
             </div>
 
@@ -202,13 +202,13 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="" class="fancybox" rel="ligthbox">
-                    <img  src="img/06.jfif" class="zoom img-fluid "  alt="">
+                    <img  src="" class="zoom img-fluid "  alt="">
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="" class="fancybox" rel="ligthbox">
-                    <img  src="img/07.jfif" class="zoom img-fluid "  alt="">
+                    <img  src="" class="zoom img-fluid "  alt="">
                 </a>
             </div>
             
