--- a/index.html
+++ b/index.html
@@ -777,10 +777,9 @@
                         <div class="team-img position-relative overflow-hidden">
                             <img class="img-fluid w-100" src="img/f2.jpg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -792,12 +791,11 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/f5.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/t1.jpeg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
@@ -809,12 +807,11 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/f3.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/t2.jpeg" alt="">
                             <div class="team-social">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="https://www.tiktok.com/@flossin._?_t=8kuYzQ1yjCv&_r=1"><i class="fab fa-tiktok fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square me-2" href="ttps://www.facebook.com/trevor.Aape"><i class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-primary btn-square" href="https://www.instagram.com/flossin.__?igsh=cjRzbWVzbG1qbWRo"><i class="fab fa-instagram fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="text-center py-4">
