--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Flossin</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Money" name="keywords">
-    <meta content="FTrading Forex" name="description">
+    <meta content="Flossin Forex" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -715,7 +715,7 @@ function closeVideo() {
                     <div class="bg-primary rounded h-100 d-flex align-items-center p-5 wow zoomIn" data-wow-delay="0.9s">
                         <form id="contact" action="https://api.web3forms.com/submit" method="POST">
                             <div class="row g-3">
-                                <input type="hidden" name="access_key" value="41dedeea-c233-4265-a437-c641aee6053c">
+                                <input type="hidden" name="access_key" value="eaa177f4-8882-403b-adae-1833a89ed171">
                                 <div class="col-xl-12">
                                     <input id="name" name="name" type="text" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;" required>
                                 </div>
