customer support client

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
     
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="img/lg1.jpg">
+	
+	<script type="text/javascript">
+  (function(d, t) {
+      var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+      v.onload = function() {
+        window.voiceflow.chat.load({
+          verify: { projectID: '6790eb23efd76444871172d8' },
+          url: 'https://general-runtime.voiceflow.com',
+          versionID: 'production'
+        });
+      }
+      v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+  })(document, 'script');
+</script>
 </head>
 
 <body>
