--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <h4 class="text-primary mb-0">+254759777222</h4>
                         </div>
                     </div>
-                    <a href="#contact" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Call Back</a>
+                    <a href="#contact" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Contact Us</a>
                     <a href="https://wa.me/254759777222" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s" style="background-color: #075E54;"><i class="fab fa-whatsapp fw-normal"></i>Text Us On Whatsapp</a>
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
